--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
       - name: file1.sh
         run: |
           ./script.sh ./tests/file1.sh
-          ./file1.sh.enc.sh
+          ./tests/file1.sh.enc.sh
           if [ $? -ne 0 ]; then
           echo "Test failed"
           exit 1
@@ -37,7 +37,7 @@ jobs:
       - name: file2.sh
         run: |
           ./script.sh ./tests/file2.sh
-          ./file2.sh.enc.sh
+          ./tests/file2.sh.enc.sh
           if [ $? -ne 0 ]; then
           echo "Test failed"
           exit 1
