--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,16 +14,16 @@ jobs:
     steps:
       - name: Test №1
         run: |
-          chmod +x script.sh
-          ./script.sh ./file1.sh
-          ./file1.sh.enc.sh
+          chmod +x /script.sh
+          /script.sh ./file1.sh
+          /file1.sh.enc.sh
       - name: Test №2
         run: |
           chmod +x script.sh
-          ./script.sh ./file2.sh
-          ./file2.sh.enc.sh
+          /script.sh ./file2.sh
+          /file2.sh.enc.sh
       - name: Test №3
         run: |
           chmod +x script.sh
-          ./script.sh ./file3.sh
-          ./file3.sh.enc.sh
+          /script.sh /file3.sh
+          /file3.sh.enc.sh
