--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Test №1
         run: |
           chmod +x script.sh
-          ./script.sh file1.sh
+          echo "Password1234" | ./script.sh file1.sh
           ./file1.sh.enc.sh
       - name: Test №2
         run: |
@@ -25,4 +25,4 @@ jobs:
         run: |
           chmod +x script.sh
           ./script.sh file3.sh
-          ./file3.sh.enc.sh
+          echo "3" | ./file3.sh.enc.sh
