--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Test №1
         run: |
           chmod +x script.sh
-          echo "Pass1234" | ./script.sh file1.sh
-          ./file1.sh.enc.sh
+          ./script.sh file1.sh
+          echo "Pass1234" | ./file1.sh.enc.sh
       - name: Test №2
         run: |
           chmod +x script.sh
